# Hybrid-Diversified-Routing-System

./: README.md  Server.py  ServerModel.py
COL_Model_Training/: COL_model_training.py
Client-End/: CMakeLists.txt  COL_NodePair  ClassificationSystem.h  Client.cpp  CoherenceDecomposition.h  DKSP.cpp  DynamicSimilarity.cpp  FirstPath.cpp  FirstPath_addMatrix.cpp  GridCoherence.cpp  MAN_NodePair  NY_NodePair  SPT.cpp  Task  astar.cpp  eKSPCompare.cpp  esx.cpp  graph.cpp  graph.h  heap.h  kspwlo.hpp  main.cpp  makefile  onepass.cpp  svp_plus.cpp  tools.hpp
Client-End/COL/: USA-COL-Q1.txt  USA-COL-Q2.txt  USA-COL-Q3.txt  USA-COL-Q4.txt
Client-End/NY/: USA-NY-Q1.txt  USA-NY-Q2.txt  USA-NY-Q3.txt  USA-NY-Q4.txt
DKSP/: CMakeLists.txt  DynamicSimilarity.cpp  EdgesBlocking.cpp  Task  eKSP.cpp  eKSPCompare.cpp  eKSPPrune.cpp  graph.cpp  graph.h  main.cpp  makefile
Model-Training/: NY_model3New_Newtorch3_recordEpoch.py
NY_Model_Training/: NY_model_training.py
Server-End/: COLServer.py  COLServerModel_Trans.py  NYServer.py  NYServerModel_MLP.py  Server.py  epoch=11-val_loss=334.66.ckpt  epoch=19-val_loss=nan.ckpt  epoch=5-val_loss=363.05.ckpt
